--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
     compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '2.0.0'
     compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.12'
-        
+    
+    compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+
     testCompile 'io.github.openfeign:feign-jackson:9.7.0'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.24.0'
     
