--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'java'
 
 group 'uk.gov.hmcts'
-version '1.0.13-SNAPSHOT'
+version '1.0.14-SNAPSHOT'
 
 // tag::repositories[]
 repositories {
@@ -45,7 +45,8 @@ dependencies {
 
     testCompile 'io.github.openfeign:feign-jackson:9.7.0'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.24.0'
-    
+    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0-beta.5'
+    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.0-beta.5'
 }
 // end::dependencies[]
 
