--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,32 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
-    id "net.researchgate.release" version "2.8.1"
+    id 'com.jfrog.bintray' version '1.8.4'
+    id 'maven'
 }
 
 apply plugin: 'java'
 
+def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "DEV-SNAPSHOT"
+
 group 'uk.gov.hmcts'
-version '1.0.9-SNAPSHOT'
+version buildNumber
+
+def gitRepo = "https://github.com/hmcts/ccd-api-test-automation-fw"
+
+def pomConfig = {
+    licenses {
+        license {
+            name "MIT License"
+            url "http://www.opensource.org/licenses/mit-license.php"
+            distribution "repo"
+        }
+    }
+
+    scm {
+        url "https://github.com/hmcts/ccd-api-test-automation-fw"
+    }
+}
 
 // tag::repositories[]
 repositories {
@@ -29,44 +48,58 @@ jar {
     baseName = "befta-fw"
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
 publishing {
     publications {
-        ccdAutomationFrameWorkLibrary(MavenPublication) {
+        Main(MavenPublication) {
             from components.java
+            artifact sourcesJar
+            artifact javadocJar
+            groupId project.group
+            artifactId 'idam-client'
+            version project.version
+
+            pom.withXml {
+                def root = asNode()
+                root.appendNode('description', 'CCD Test Automation Framework')
+                root.appendNode('name', 'CCD Api Test Automation FW')
+                root.appendNode('url', gitRepo)
+                root.children().last() + pomConfig
+            }
         }
     }
-    repositories {
-        maven {
-            url = 'https://dl.bintray.com/hmcts/hmcts-maven'
+}
+
+bintray {
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
+    publications = ['Main']
+    publish = true
+    pkg {
+        repo = 'hmcts-maven'
+        name = 'ccd-api-test-automation-fw'
+        userOrg = 'hmcts'
+        licenses = ['MIT']
+        vcsUrl = gitRepo
+        version {
+            name = project.version
         }
     }
 }
-
-release {
-    failOnUnversionedFiles = false
-    failOnCommitNeeded = false
-    failOnPublishNeeded = false
-    failOnUpdateNeeded = true
-    git {
-        requireBranch = ''
-        requireBranch = ''
-        pushToRemote = 'origin'
-        pushToBranchPrefix = ''
-        commitVersionFileOnly = false
-        signTag = false
-    }
-}
-
-task(startmessage) << {
-    println 'starting build'
-}
-
-task(printversion) << {
-    println project.version
-}
-
-beforeReleaseBuild.dependsOn startmessage
-afterReleaseBuild.dependsOn printversion
 
 wrapper.gradleVersion = '2.10'
 
