--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,8 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.24.0'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0-beta.5'
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.0-beta.5'
+    testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
 }
 // end::dependencies[]
 
