correct project name for eclipse

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ccd-api-test-automation-fw</name>
+	<name>befta-fw</name>
 	<comment></comment>
 	<projects>
 	</projects>
