--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,9 @@ dependencies {
     
     compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
 
+    compile group: 'org.apache.poi', name: 'poi', version: '4.0.0'
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.0'
+
     testCompile 'io.github.openfeign:feign-jackson:9.7.0'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.24.0'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0-beta.5'
