RDM-9118 Dynamic Value and Reflection Util updates
   [RDM-9118](https://tools.hmcts.net/jira/browse/RDM-9118)
   [RDM-8842](https://tools.hmcts.net/jira/browse/RDM-8842)

Framework changes for RDM-9118 FTA organisation adjustment for RDM-8842:
* another attempt to resolve JUnit failures in pipeline.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,6 +22,11 @@ jobs:
         java-version: 1.8
     - name: Build
       run: ./gradlew check
+    - name: Archive test report
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-report
+        path: build/reports/tests/test
     - name: Release
       env:
         BINTRAY_USER: jenkins-reform-hmcts
