--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,11 +22,12 @@ jobs:
         java-version: 1.8
     - name: Build
       run: ./gradlew check
-    - name: Archive test report
+    - name: Archive test reports
+      if: always()
       uses: actions/upload-artifact@v2
       with:
-        name: test-report
-        path: build/reports/tests/test
+        name: test-reports
+        path: build/reports/tests/
     - name: Release
       env:
         BINTRAY_USER: jenkins-reform-hmcts
