RDM-9118 Dynamic Value and Reflection Util updates
   [RDM-9118](https://tools.hmcts.net/jira/browse/RDM-9118)
   [RDM-8842](https://tools.hmcts.net/jira/browse/RDM-8842)

Framework changes for RDM-9118 FTA organisation adjustment for RDM-8842:
* attempt to resolve JUnit failures in pipeline.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Build
       run: ./gradlew check
     - name: Archive test reports
-      if: always()
+      if: failure()
       uses: actions/upload-artifact@v2
       with:
         name: test-reports
