--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,7 @@ dependencies {
 
     testCompile 'io.github.openfeign:feign-jackson:9.7.0'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.24.0'
+    testCompile group: 'org.mockito', name: 'mockito-inline', version: '2.13.0'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0-beta.5'
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.0-beta.5'
     testCompile "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
