RDM-9309: Functional Tests for CaseLink           [RDM-9309] (https://tools.hmcts.net/jira/browse/RDM-9309).

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 
 apply plugin: 'java'
 
-def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "5.4.0-RDM-9309"
+def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "5.3.0-SNAPSHOT"
 
 group 'uk.gov.hmcts'
 
