--- a/build.gradle
+++ b/build.gradle
@@ -157,6 +157,7 @@ dependencies {
     compile group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'
 
     implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.+'
+    implementation group: 'org.json', name: 'json', version: '20200518'
 
     testCompile 'io.github.openfeign:feign-jackson:9.7.0'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
