--- a/build.gradle
+++ b/build.gradle
@@ -235,9 +235,12 @@ compileJava {
     options.incremental = false
 }
 
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
+//java {
+//    toolchain {
+//        languageVersion = JavaLanguageVersion.of(17)
+//    }
+//}
+
+sourceCompatibility = 17
+targetCompatibility = 17
 
