CCD-3086 Add JDK 17 to BEFTA Framework - try catch put around setAccessible() method, java 17 toolchain config added to build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -235,12 +235,12 @@ compileJava {
     options.incremental = false
 }
 
-//java {
-//    toolchain {
-//        languageVersion = JavaLanguageVersion.of(17)
-//    }
-//}
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
-sourceCompatibility = 17
-targetCompatibility = 17
+//sourceCompatibility = 17
+//targetCompatibility = 17
 
