--- a/build.gradle
+++ b/build.gradle
@@ -149,6 +149,7 @@ dependencies {
 
     implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.4'
     implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.12'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
     implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
 
@@ -160,16 +161,15 @@ dependencies {
     implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.+'
     implementation group: 'org.json', name: 'json', version: '20200518'
 
-    implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '9.7.0'
+    testImplementation group: 'io.github.openfeign', name: 'feign-jackson', version: '9.7.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
     testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.4.0'
     testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '0.9.0'
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
-    implementation group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.5.2'
-    testImplementation group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.6.2'
+    testRuntimeOnly  "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
+    testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.5.2'
+    testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.6.2'
 
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 }
 // end::dependencies[]
 
