CCD-3694 Register GS_profile role.
   [CCD-3675](https://tools.hmcts.net/jira/browse/CCD-3675)
   [CCD-3694](https://tools.hmcts.net/jira/browse/CCD-3694)

Add GS_profile role.

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 apply plugin: 'java'
 
-def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "8.7.6"
+def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "8.7.7-CCD-3694"
 
 group 'com.github.hmcts'
 
