--- a/build.gradle
+++ b/build.gradle
@@ -167,6 +167,7 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.4.0'
     testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '0.9.0'
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
     testRuntimeOnly  "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
     testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.5.2'
     testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.6.2'
