--- a/build.gradle
+++ b/build.gradle
@@ -140,16 +140,15 @@ dependencies {
 
     implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.4.0'
 
-    // NB: these libraries will often be used by the custom BeftaRunner and BeftaAdapter classes in each repo using BEFTA
-    api group: 'io.cucumber', name: 'cucumber-java', version: '5.7.0'
-    api group: 'io.cucumber', name: 'cucumber-junit', version: '5.7.0'
+    implementation group: 'io.cucumber', name: 'cucumber-java', version: '5.7.0'
+    implementation group: 'io.cucumber', name: 'cucumber-junit', version: '5.7.0'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
 
-    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.1.2'
+    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.4'
     implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.12'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 
@@ -169,7 +168,6 @@ dependencies {
     testImplementation group: 'org.mockito', name: 'mockito-inline', version: '4.5.1'
     testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '0.9.0'
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
     testRuntimeOnly  "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
     testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.5.2'
     testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.6.2'
