--- a/.github/workflows/release-with-jitpack.yml
+++ b/.github/workflows/release-with-jitpack.yml
@@ -15,11 +15,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
-        java-version: 1.8
+        distribution: 'temurin'
+        java-version: '17'
+        cache: 'gradle'
     - name: Build
       run: ./gradlew check
     - name: Archive test reports
