remove debug jvm option and fix readme

--- a/build.gradle
+++ b/build.gradle
@@ -70,8 +70,7 @@ test {
   jvmArgs = [
     "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
     "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.util=ALL-UNNAMED",
-    '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000'
+    "--add-opens=java.base/java.util=ALL-UNNAMED"
   ]
 }
 
