--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 apply plugin: 'java'
 
-def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "9.0.1-SNAPSHOT"
+def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "9.0.2-SNAPSHOT"
 
 group 'com.github.hmcts'
 
@@ -137,7 +137,7 @@ publishing {
     }
 }
 
-wrapper.gradleVersion = '2.10'
+wrapper.gradleVersion = '8.7'
 
 dependencies {
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.1'
@@ -158,8 +158,10 @@ dependencies {
 
     implementation group: 'com.google.guava', name: 'guava', version: '33.2.0-jre'
 
-    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
-    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
+    // Purposefully capping the version of org.apache.poi:poi-ooxml to 4.1.2 to avoid issue
+    // NoSuchMethodError: org.apache.commons.io.IOUtils.byteArray() from commons-io:commons-io
+    implementation group: 'org.apache.poi', name: 'poi', version: '4.1.2'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.0'
     implementation 'org.springframework.cloud:spring-cloud-openfeign-core:4.1.1'
