--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,8 @@ plugins {
 
 apply plugin: 'java'
 
-def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "9.0.2-SNAPSHOT"
+def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "9.2.2"
+System.printf("version: " + buildNumber)
 
 group 'com.github.hmcts'
 
