migrate from jitpack to azure artifacts for hosting

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 apply plugin: 'java'
 
-def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "9.2.2"
+def buildNumber = System.getenv("RELEASE_VERSION") ?: "9.2.2"
 System.printf("version: " + buildNumber)
 
 group 'com.github.hmcts'
@@ -34,7 +34,7 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven {
-        url 'https://jitpack.io'
+        url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
     }
 }
 // end::repositories[]
@@ -136,6 +136,16 @@ publishing {
             }
         }
     }
+    repositories {
+        maven {
+            name = "AzureArtifacts"
+            url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
+            credentials {
+                username = System.getenv("AZURE_DEVOPS_ARTIFACT_USERNAME")
+                password = System.getenv("AZURE_DEVOPS_ARTIFACT_TOKEN")
+            }
+        }
+    }
 }
 
 wrapper.gradleVersion = '8.10'
@@ -153,7 +163,7 @@ dependencies {
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.13'
 
-    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.1.2'
+    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.2'
     implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.16'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
 
