--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,5 +1,3 @@
-jdk:
-  - openjdk21
-before_install:
-  - sdk install java 21.0.2-open
-  - sdk use java 21.0.2-open
+install:
+  - echo "JitPack build intentionally disabled."
+  - exit 1
