CCD-6805: Shell Cases, ShellMapping tab

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 apply plugin: 'java'
 
-def buildNumber = System.getenv("RELEASE_VERSION") ?: "9.2.2"
+def buildNumber = System.getenv("RELEASE_VERSION") ?: "9.2.3-SNAPSHOT"
 System.printf("version: " + buildNumber)
 
 group 'com.github.hmcts'
